[gd_scene load_steps=26 format=3 uid="uid://ddxhtdjetamyh"]

[ext_resource type="Script" uid="uid://bjxwpnpydfkmf" path="res://scripts/skeleton.gd" id="1_yag7t"]
[ext_resource type="Texture2D" uid="uid://ccqfhk6janflk" path="res://sprites/3 - Skeleton/Bone_Toss (32 x 32).png" id="2_4oc3b"]
[ext_resource type="Texture2D" uid="uid://0xn7wul5dwky" path="res://sprites/3 - Skeleton/Crumbling_Into_Bone_Pile (32 x 32).png" id="2_fpmxe"]
[ext_resource type="Texture2D" uid="uid://cusiyn8a2gx7b" path="res://sprites/3 - Skeleton/Limping_Movement (32 x 32).png" id="3_4oc3b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b0uhi"]
atlas = ExtResource("2_4oc3b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qgbw"]
atlas = ExtResource("2_4oc3b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjous"]
atlas = ExtResource("2_4oc3b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f01p"]
atlas = ExtResource("2_4oc3b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe8ja"]
atlas = ExtResource("2_4oc3b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr2a"]
atlas = ExtResource("2_fpmxe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j31jw"]
atlas = ExtResource("2_fpmxe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx6xw"]
atlas = ExtResource("2_fpmxe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mssj4"]
atlas = ExtResource("2_fpmxe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kifd"]
atlas = ExtResource("2_fpmxe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsvvn"]
atlas = ExtResource("2_fpmxe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oayfp"]
atlas = ExtResource("2_fpmxe")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qj8h"]
atlas = ExtResource("3_4oc3b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sdy1"]
atlas = ExtResource("3_4oc3b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu166"]
atlas = ExtResource("3_4oc3b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lem8q"]
atlas = ExtResource("3_4oc3b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp68x"]
atlas = ExtResource("3_4oc3b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckyi2"]
atlas = ExtResource("3_4oc3b")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yag7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0uhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qgbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjous")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f01p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe8ja")
}],
"loop": false,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j31jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx6xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mssj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kifd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsvvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oayfp")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qj8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sdy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu166")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lem8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp68x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyi2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fpmxe"]
radius = 7.0
height = 28.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yag7t"]
size = Vector2(15, 28)

[node name="Skeleton" type="CharacterBody2D"]
z_index = 2
collision_layer = 4
script = ExtResource("1_yag7t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yag7t")
animation = &"attack"
frame = 2
frame_progress = 0.8463268

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_fpmxe")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemies"]]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_yag7t")
debug_color = Color(0.014804562, 0.65134656, 0, 0.41960785)

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(2, 12)
target_position = Vector2(12, 0)

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(13, 0)
target_position = Vector2(0, 17)

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(1, 13)
target_position = Vector2(51, 0)
collision_mask = 2

[node name="BoneStarPosition" type="Node2D" parent="."]
position = Vector2(15, -5)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
